--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -11,11 +11,11 @@
     align-items: center;
     position: relative;
     min-height: 100vh;
-    background: rgba(194, 233, 251, 1);
+    background: rgb(217, 230, 236);
     background: radial-gradient(
       circle,
-      rgba(161, 196, 253, 1) 10%,
-      rgba(194, 233, 251, 1) 100%
+      rgb(217, 230, 236) 10%,
+      rgb(217, 230, 236) 100%
     );
   }
   .progress-bar {
@@ -31,9 +31,9 @@
   }
   .card {
     min-width: 400px;
-    background-color: white;
-    border: 1px solid #333;
-    border-radius: 0.5rem;
+    /* background-color: white; */
+    /* border: 1px solid #333;
+    border-radius: 0.5rem; */
     padding: 0.5rem;
     max-width: 500px;
     margin: 0 auto;
@@ -78,7 +78,7 @@
     align-content: space-between;
   }
   button {
-    background-color: #4caf50;
+    background-color: #3d30f0;
     border: none;
     color: white;
     padding: 0.8rem;
