--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -11,12 +11,12 @@
     align-items: center;
     position: relative;
     min-height: 100vh;
-    background: rgb(217, 230, 236);
+    /* background: rgb(217, 230, 236);
     background: radial-gradient(
       circle,
       rgb(217, 230, 236) 10%,
       rgb(217, 230, 236) 100%
-    );
+    ); */
   }
   .progress-bar {
     width: 400px;
@@ -27,7 +27,7 @@
   .progress-bar div {
     width: 25%;
     height: 100%;
-    background-color: rgb(98, 0, 255);
+    background-color: rgb(60, 189, 60);
   }
   .card {
     min-width: 400px;
